results/SVCOMP/specgen/log-exceptions10-2024_02_25_16_02_03.txt
class A extends RuntimeException {}

class B extends A {}

class C extends B {}

public class exceptions10 {
  //@ ensures \result == false;
  static void foo() {
    try {
      A b = new A();
      throw b;
    } catch (A exc) {
      assert false;
    }
  }

  //@ ensures \result == false;
  public static void main(String[] args) {
    try {
      A a = new A();
      foo();
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions10.java:8: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == false;
               ^
/home/max/Documents/JMLGPT/tmp/exceptions10.java:18: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == false;
               ^
2 errors

class A extends RuntimeException {}

class B extends A {}

class C extends B {}

public class exceptions10 {
  static void foo() {
    try {
      A b = new A();
      throw b;
    } catch (A exc) {
      assert false;
    }
  }

  public static void main(String[] args) {
    try {
      A a = new A();
      foo();
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions10.java:13: verify: The prover cannot establish an assertion (Assert) in method foo
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/exceptions10.java:22: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
2 verification failures

class A extends RuntimeException {}

class B extends A {}

class C extends B {}

public class exceptions10 {
  //@ ensures true;
  static void foo() {
    try {
      A b = new A();
      throw b;
    } catch (A exc) {
      assert false;
    }
  }

  //@ ensures true;
  public static void main(String[] args) {
    try {
      A a = new A();
      foo();
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions10.java:14: verify: The prover cannot establish an assertion (Assert) in method foo
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/exceptions10.java:24: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
2 verification failures

class A extends RuntimeException {}

class B extends A {}

class C extends B {}

public class exceptions10 {
  //@ ensures true;
  static void foo() {
    try {
      A b = new A();
      throw b;
    } catch (A exc) {
      // do nothing
    }
  }

  //@ ensures true;
  public static void main(String[] args) {
    try {
      A a = new A();
      foo();
    } catch (B exc) {
      // do nothing
    }
  }
}

